syntax = "proto3";
option java_package = "fr.sos.projetmines";
option java_multiple_files = true;

import "OrowanAuthenticator.proto";

message UserCreationRequest {
  string username = 1;
  string password = 2;
  Job job = 3;
}

message UserDeletionRequest {
  string username = 1;
}

message UserJobUpdateRequest {
  string username = 1;
  Job job = 2;
}

enum OperationResult {
  SUCCESSFUL = 0;
  FAIL = 1;
}

message UserOperationResult {
    OperationResult result = 1;
}


service UserManagement {
  rpc CreateUser (UserCreationRequest) returns (UserOperationResult);
  rpc DeleteUser (UserDeletionRequest) returns (UserOperationResult);
  rpc SetUserJob (UserJobUpdateRequest) returns (UserOperationResult);
}